git commit -m"adicionando cod"

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Teste html</title>
+    </head>
+    <body>    
+        <center><h1>Chega em 2023: remake de Resident Evil 4 já em pré-venda para PC, PS4, PS5 e Xbox Series</h1></center>
+        <center><img src="pre_venda_resident_evil_.png.jpg" alt="re 4">
+        <header>    
+            <h1>Resident Evil 4 Remake</h1>
+            <h2>Resident Evil 4 esta de volta!</h2>
+            <p>A Capcom revelou ontem (20) um novo trailer com gameplay de Resident Evil 4 Remake e após as novidades apresentadas, o jogo foi colocado em pré-venda em todas as plataformas digitais em que estará disponível e você já pode realizar a reserva das edições Padrão e Deluxe. Resident Evil 4 será lançado em 24 de março de 2023 para PlayStation 4, PlayStation 5, Xbox Series S|X e PC.
+                Os jogadores que adquirirem a nova versão de Resident Evil 4 na pré-venda também irão receber bônus de pré-venda, diferentes nas duas versões que estão sendo oferecidas ao público pela Capcom. Você pode conferir todas as novidades do jogo apresentadas no Showcase especial de Resident Evil clicando aqui.
+                Enquanto no PlayStation, os valores das versões de PS4 e PS5 são iguais, pois o jogo traz atualização gratuita de geração, no Xbox apenas o console de nova geração receberá o jogo. Confira abaixo os valores de cada uma das versões na sua plataforma preferida.
+        </header>
+    <main>
+        <article>
+            <h1>Dead Space Remake: confira os primeiros minutos do game</h1>
+            <img src="dead-space-remake-.png" alt="dead-space-remake">
+            <h2>Do mesmo criador de The Callisto Protocol, Glen Schofield, Dead Space retorna com o remake que chega em janeiro, mas sem a participação de seu criador.</h2>
+            <p>
+                Dead Space Remake chega no dia 27 de janeiro de 2023 para PC, PS5 e Xbox Series X|S. Quem fizer a pré-compra do jogo, receberá também uma cópia de Dead Space 2 na data de lançamento do remake.
 
+                A nova criação de Glen Schofield, The Callisto Protocol, teve uma chegada complicada, sendo recebido com notas baixas e queda nas ações de sua publicadora, Krafton, Inc. Os próprios desenvolvedores disseram que não tem medo da comparação de seu novo jogo com Dead Space.Dead Space, o clássico de terror de sobrevivência e ficção científica, está de volta totalmente reformulado para oferecer uma experiência mais profunda e imersiva. O remake tem uma fidelidade visual impressionante, áudio atmosférico e aprimoramentos na jogabilidade, ao mesmo tempo em que se mantém fiel à emocionante visão do jogo original."
+            </p>
+        </article>
+        <article>
+            <h1>O REMAKE DE SHADOW OF THE COLOSSUS É TÃO EXCEPCIONAL QUÃO O ORIGINAL!!</h1>
+            <img src="shadow-of-the-colossus-for-ps4-review.png" alt= "shadow of the colossus">
+            <h2>Desenvolvido pela Bluepoint Games e lançado em fevereiro de 2018, o jogo foi feito com um respeito incrível pelo original, de 2005, e é possível ver isso em cada frame da obra.</h2>
+            <p>Shadow of The Colossus é um daqueles jogo que marcam a gente, e nos deixam maravilhado pela forma como todos os detalhes são trabalhados, desde a crina do cavalo balançando ao vento à forma como o sistema de física do jogo era tão realista a ponto de dar raiva, sendo engraçado quando às vezes o personagem tropeçava enquanto corria, e enfurecedor quando ele fazia isso no meio de uma luta. Lutas que eram uma das coisas mais impressionantes no jogo. Eram bem poucas quando comparadas à outros jogos da época (16, para ser mais exato), mas cada uma delas é tão memorável ao ponto de eu ser capaz de descrevê-las em detalhe, mesmo após ter passado mais de dez anos desde a primeira vivência jogando.
+                Recordando muitas coisas do jogo original, mais coisas do que eu jamais achei que lembraria: da forma como eu matei o primeiro colosso, e como eu me senti terrível depois, até como eu chorei de culpa e não toquei no jogo por meses (eu era criança, não me julgue), e como no final eu voltei pra ele e joguei até o final, porque mesmo me sentindo um pouco mal por matar os colossos, era um crime maior deixar um jogo daqueles passar.
+                Este, é um jogo que precisa ser experimentado em primeira mão, pra que se possa ficar embasbacado com os detalhes, a música e até a forma como o jogo te deixa engajado em seu roteiro e personagens, mesmo quase não tendo diálogo, ou como ele te faz sentir pelos colossos, te fazendo pensar duas vezes se quer mesmo fazer aquilo
+            </p></center>
+        </article>
+    </main>
+    </body>
+</html> 
