--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                 Este, é um jogo que precisa ser experimentado em primeira mão, pra que se possa ficar embasbacado com os detalhes, a música e até a forma como o jogo te deixa engajado em seu roteiro e personagens, mesmo quase não tendo diálogo, ou como ele te faz sentir pelos colossos, te fazendo pensar duas vezes se quer mesmo fazer aquilo
             </p></center>
         </article>
+        <footer>
+        <p>Autor:Rafael cuiaba</p>
+        <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">rafael.eva.rodigues@gmmail.com
+        </a>
+        </footer> 
     </main>
     </body>
 </html> 
